2010-04-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Rework error handling, reduce code duplication
	and release resources (MemoryStream and WebResponse). Fix 
	remaining issues in DRT#355

2010-04-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* Deployment.cs: Accept anything newer than 2.0.30524 (but not
	30524 itself). Fix another failure in DRT#355

2010-04-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Fix NRE if EmitError is called before the
	application is created. Fix two failures in DRT#355

2010-04-01  Alan McGovern  <amcgovern@novell.com>

	* FrameworkElement.cs: RaiseBindingValidationError is a
	  bubbling event - so recurse up the visual tree when invoking
	  it.

2010-03-30  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.g.cs: StylusPoint is a DO in native and a
	  struct in managed, so give it the same magic marshalling
	  treatment that Matrix gets.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* SystemColors.cs: Move the SystemColor enum out of the
	  SystemColors class to simplify our managed/native interop.

	* DependencyProperty.cs: Add enums to our type system so that
	  we don't lose type information when attempting to parse them
	  from xaml.


2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* SystemColors.cs: Move the SystemColor enum out of the
	  SystemColors class to simplify our managed/native interop.

	* DependencyProperty.cs: Add enums to our type system so that
	  we don't lose type information when attempting to parse them
	  from xaml.


2010-03-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Application.cs
	* DependencyObject.cs
	* DependencyObject.g.cs
	* RoutedEventArgs.cs
	* SizeChangedEventArgs.cs:
		Call SafeNativeMethods so the default ctor are not
		decorated with a [SecuritySafeCritical] attribtue	

2010-03-26  Alan McGovern  <amcgovern@novell.com>

	* ChangeLog:
	* SystemColors.cs: Revert r154268 for now. It's causing
	  regressions.
